# signaturizer3D

./: .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  singularity.def
docs/: index.md  releases.md  weights.md
notebooks/: infer_signatures.ipynb
notebooks/sdf_files/: S-Fluoxetine-3D-structure-CT1000405130.sdf  tamoxifen-3D-structure-CT1001176588.sdf
signaturizer3d/: __init__.py  infer_signature.py  inference.py  model.py  signaturizer.py  space.py  unimol.py
signaturizer3d/data/: __init__.py  conformer.py  convert.py  datahub.py  datareader.py  sdf.py  smiles.py  unimol.py
signaturizer3d/input/: __init__.py  sdf.py  smiles.py  unimol_adapter.py
signaturizer3d/models/: nnmodel.py  transformers.py  unimol.py
signaturizer3d/normalize/: normalize.py  space_stds.pkl
signaturizer3d/tasks/: trainer.py
signaturizer3d/unicore/: layer_norm.py  multihead_attention.py  softmax_dropout.py  transformer_encoder.py  transformer_encoder_layer.py  unicore_model.py  utils.py
signaturizer3d/unimol/: __init__.py  pad.py  unimol.py
signaturizer3d/utils/: metrics.py
tests/: conftest.py  test_convert_data.py  test_coords_to_unimol_input.py  test_sdf_file.py  test_sdf_parsing.py  test_signaturizer.py  test_signaturizer_speed.py  test_smiles.py  test_smiles_to_coords.py
tests/data/: atoms_list.pkl  coordinates_list.pkl  expected_sig4_output_A1.pkl  expected_sig4_output_B4_CPU.pkl  expected_sig4_output_B4_GPU.pkl
weights/: space_means.pkl
